--- a/index.html
+++ b/index.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Course homepage for WDD 231" />
-  <title>My WDD 231 Course Home Page</title>
+  <meta name="description" content="Melina's WDD 231 Course Home Page" />
+  <meta name="author" content="Melina" />
+  <title>Melina's WDD 231 Course Home Page</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to My Course Home Page</h1>
+    <h1>Melina's WDD 231 Course Home Page</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Assignments</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
+    <section id="intro">
+      <h2>Welcome</h2>
+      <p>Welcome to my course homepage for WDD 231. This site will feature my weekly assignments, projects, and resources as I build a chamber of commerce website.</p>
+    </section>
+
     <section id="courses">
       <h2>Course List</h2>
       <div id="filters"></div>
       <ul id="course-list"></ul>
       <p>Total Credits: <span id="total-credits">0</span></p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>If you have questions, please reach out to me at: melina@example.com</p>
     </section>
   </main>
 
