Final fixes for W01 full credit

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Melina's WDD 231 Course Home Page</title>
 
   <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <!-- CSS -->
   <link rel="stylesheet" href="styles/style.css" />
@@ -30,7 +30,7 @@
   <main>
     <section id="intro">
       <h2>Welcome</h2>
-      <p>Welcome to my course homepage for WDD 231. This site will feature my weekly assignments, projects, and resources as I build a chamber of commerce website.</p>
+      <p>This is my WDD 231 course homepage. I'm excited to share my weekly assignments, projects, and progress as I build a Chamber of Commerce website.</p>
     </section>
 
     <section id="courses">
@@ -41,8 +41,8 @@
     </section>
 
     <section id="contact">
-      <h2>Contact</h2>
-      <p>If you have questions, please reach out to me at: melina@example.com</p>
+      <h2>Contact Me</h2>
+      <p>Email: melina@example.com</p>
     </section>
   </main>
 
