Fix folder structure and file references for no 404 errors

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meline's WDD 231 Course Home Page</title>
   <meta name="description" content="Meline's WDD 231 Course Home Page" />
   <meta name="author" content="Meline" />
-  <title>Meline's WDD 231 Course Home Page</title>
-
-  <!-- Google Fonts preconnect and import -->
+  
+  <!-- Google Fonts: combined preconnect and link -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
@@ -16,42 +16,40 @@
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-
   <header>
     <nav>
       <ul>
-        <li><a href="#courses">Courses</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#section1">Section One</a></li>
+        <li><a href="#section2">Section Two</a></li>
+        <li><a href="#section3">Section Three</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <h1>Meline's WDD 231 Course Home Page</h1>
-
-    <section id="courses">
-      <h2>Courses</h2>
-      <!-- Dynamic course list will go here -->
+    
+    <section id="section1">
+      <h2>Section One</h2>
+      <p>Welcome to section one content.</p>
     </section>
 
-    <section id="about">
-      <h2>About This Course</h2>
-      <p>Welcome to my WDD 231 course homepage where you can find all course info.</p>
+    <section id="section2">
+      <h2>Section Two</h2>
+      <p>Welcome to section two content.</p>
     </section>
 
-    <section id="contact">
-      <h2>Contact Information</h2>
-      <p>Email: meline@example.com</p>
+    <section id="section3">
+      <h2>Section Three</h2>
+      <p>Welcome to section three content.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> Meline's WDD 231. Last Modified: <span id="lastModified"></span></p>
+    <p>&copy; 2025 Meline</p>
   </footer>
 
-  <!-- External JavaScript -->
+  <!-- External JS -->
   <script src="scripts/script.js"></script>
-
 </body>
 </html>
