--- a/index.html
+++ b/index.html
@@ -2,52 +2,52 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Meline's WDD 231 Course Home Page" />
   <meta name="author" content="Meline" />
   <title>Meline's WDD 231 Course Home Page</title>
 
-  <!-- Google Fonts: preconnect + single link -->
+  <!-- Google Fonts Preconnect and Single Link -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 
-  <!-- CSS -->
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
   <header>
-    <h1>Meline's WDD 231 Course Home Page</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Assignments</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-
   <main>
+    <h1>Meline's WDD 231 Course Home Page</h1>
+
     <section>
       <h2>Welcome</h2>
-      <p>This is the course home page for WDD 231.</p>
+      <p>This is the homepage for Meline's WDD 231 course. Explore the sections below for course content, assignments, and resources.</p>
     </section>
+
     <section>
-      <h2>Course Info</h2>
-      <p>All important course resources will be listed here.</p>
+      <h2>Course Overview</h2>
+      <p>WDD 231 focuses on modern web development principles using HTML, CSS, and JavaScript. You'll learn best practices and build responsive, accessible websites.</p>
     </section>
+
     <section>
       <h2>Assignments</h2>
-      <p>Track your assignments and progress.</p>
+      <p>Check here for weekly assignments, projects, and submission deadlines.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Meline</p>
+    <p>&copy; <span id="year"></span> Meline | WDD 231</p>
   </footer>
 
-  <!-- JS with defer -->
   <script src="scripts/script.js" defer></script>
 </body>
 </html>
