--- a/index.html
+++ b/index.html
@@ -1,53 +1,69 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <!-- 1. Meta charset (must be first) -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Meline's WDD 231 Course Home Page" />
+  <meta name="description" content="Meline’s WDD 231 Course Home Page – built for responsive design and performance." />
   <meta name="author" content="Meline" />
-  <title>Meline's WDD 231 Course Home Page</title>
+  <title>Meline's WDD 231 Course Home Page</title>
 
-  <!-- Google Fonts Preconnect and Single Link -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <!-- 2. Inline critical CSS for above-the-fold content -->
+  <style>
+    body { margin:0; font-family:Arial,sans-serif; background:#f9f9f9; color:#333; line-height:1.6; }
+    header, nav, main, footer { max-width:800px; margin:auto; padding:1rem; }
+    nav ul { list-style:none; display:flex; gap:1rem; padding:0; }
+    nav a { text-decoration:none; color:#007acc; }
+    h1,h2 { color:#005a9c; }
+    section { margin-bottom:1.5rem; }
+    footer { text-align:center; font-size:0.9rem; color:#666; }
+  </style>
 
-  <link rel="stylesheet" href="styles/style.css" />
+  <!-- 3. Load fonts asynchronously to avoid render-blocking -->
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  </noscript>
+
+  <!-- 4. Defer loading the rest of your CSS or non-critical styles -->
+  <!-- Add here if you had a secondary CSS file -->
+
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Assignments</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#welcome">Welcome</a></li>
+        <li><a href="#overview">Course Overview</a></li>
+        <li><a href="#assignments">Assignments</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>Meline's WDD 231 Course Home Page</h1>
+    <h1>Meline's WDD 231 Course Home Page</h1>
 
-    <section>
+    <section id="welcome">
       <h2>Welcome</h2>
-      <p>This is the homepage for Meline's WDD 231 course. Explore the sections below for course content, assignments, and resources.</p>
+      <p>This is the Responsive Course Home Page for WDD 231. Navigate below for details.</p>
     </section>
 
-    <section>
+    <section id="overview">
       <h2>Course Overview</h2>
-      <p>WDD 231 focuses on modern web development principles using HTML, CSS, and JavaScript. You'll learn best practices and build responsive, accessible websites.</p>
+      <p> WDD 231 covers HTML5, CSS3, JavaScript, accessibility, and responsive design techniques.</p>
     </section>
 
-    <section>
+    <section id="assignments">
       <h2>Assignments</h2>
-      <p>Check here for weekly assignments, projects, and submission deadlines.</p>
+      <p>Track weekly assignments, projects, and milestones here.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> Meline | WDD 231</p>
+    <p>&copy; <span id="year"></span> Meline – WDD 231</p>
   </footer>
 
+  <!-- 5. Non-blocking JS -->
   <script src="scripts/script.js" defer></script>
 </body>
 </html>
