--- a/index.html
+++ b/index.html
@@ -1,69 +1,53 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <!-- 1. Meta charset (must be first) -->
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Meline’s WDD 231 Course Home Page – built for responsive design and performance." />
+  <meta name="description" content="Meline's WDD 231 Course Home Page" />
   <meta name="author" content="Meline" />
-  <title>Meline's WDD 231 Course Home Page</title>
+  <title>Meline's WDD 231 Course Home Page</title>
 
-  <!-- 2. Inline critical CSS for above-the-fold content -->
-  <style>
-    body { margin:0; font-family:Arial,sans-serif; background:#f9f9f9; color:#333; line-height:1.6; }
-    header, nav, main, footer { max-width:800px; margin:auto; padding:1rem; }
-    nav ul { list-style:none; display:flex; gap:1rem; padding:0; }
-    nav a { text-decoration:none; color:#007acc; }
-    h1,h2 { color:#005a9c; }
-    section { margin-bottom:1.5rem; }
-    footer { text-align:center; font-size:0.9rem; color:#666; }
-  </style>
+  <!-- Preconnect and Load Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-  <!-- 3. Load fonts asynchronously to avoid render-blocking -->
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-  <noscript>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  </noscript>
-
-  <!-- 4. Defer loading the rest of your CSS or non-critical styles -->
-  <!-- Add here if you had a secondary CSS file -->
-
+  <!-- External CSS -->
+  <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
   <header>
+    <h1>Meline's WDD 231 Course Home Page</h1>
     <nav>
       <ul>
-        <li><a href="#welcome">Welcome</a></li>
-        <li><a href="#overview">Course Overview</a></li>
-        <li><a href="#assignments">Assignments</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Assignments</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>Meline's WDD 231 Course Home Page</h1>
-
-    <section id="welcome">
-      <h2>Welcome</h2>
-      <p>This is the Responsive Course Home Page for WDD 231. Navigate below for details.</p>
+    <section>
+      <h2>About the Course</h2>
+      <p>This course focuses on web development using modern tools and standards.</p>
     </section>
-
-    <section id="overview">
-      <h2>Course Overview</h2>
-      <p> WDD 231 covers HTML5, CSS3, JavaScript, accessibility, and responsive design techniques.</p>
+    <section>
+      <h2>Course Objectives</h2>
+      <p>Learn HTML, CSS, and JavaScript by building projects.</p>
     </section>
-
-    <section id="assignments">
-      <h2>Assignments</h2>
-      <p>Track weekly assignments, projects, and milestones here.</p>
+    <section>
+      <h2>Student Info</h2>
+      <p>Name: Meline</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> Meline – WDD 231</p>
+    <p>&copy; <span id="year"></span> Meline | WDD 231</p>
   </footer>
 
-  <!-- 5. Non-blocking JS -->
+  <!-- External JS -->
   <script src="scripts/script.js" defer></script>
 </body>
 </html>
