--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Meline's WDD 231 Course Home Page" />
+  <meta name="description" content="Meline's WDD 231 Course Home Page" />
   <meta name="author" content="Meline" />
-  <title>Meline's WDD 231 Course Home Page</title>
+  <title>Meline's WDD 231 Course Home Page</title>
 
-  <!-- Preconnect and Load Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 
-  <!-- External CSS -->
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
-
 <body>
   <header>
-    <h1>Meline's WDD 231 Course Home Page</h1>
+    <h1>Meline's WDD 231 Course Home Page</h1>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -30,24 +28,23 @@
 
   <main>
     <section>
-      <h2>About the Course</h2>
-      <p>This course focuses on web development using modern tools and standards.</p>
+      <h2>Introduction</h2>
+      <p>Welcome to my course homepage for WDD 231.</p>
     </section>
     <section>
-      <h2>Course Objectives</h2>
-      <p>Learn HTML, CSS, and JavaScript by building projects.</p>
+      <h2>Course Overview</h2>
+      <p>This course covers HTML, CSS, and JavaScript with a project-based approach.</p>
     </section>
     <section>
-      <h2>Student Info</h2>
-      <p>Name: Meline</p>
+      <h2>Assignments</h2>
+      <p>Find weekly assignments and project details here.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> Meline | WDD 231</p>
+    <p>&copy; <span id="year"></span> Meline</p>
   </footer>
 
-  <!-- External JS -->
   <script src="scripts/script.js" defer></script>
 </body>
 </html>
