--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Meline's WDD 231 Course Home Page" />
-  <meta name="author" content="Meline" />
-  <title>Meline's WDD 231 Course Home Page</title>
+  <meta charset="utf-8"> <!-- fixed meta charset -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Meline's WDD 231 Course Home Page showcasing course materials and resources.">
+  <meta name="author" content="Meline">
+  <title>Meline's WDD 231 Course Home Page</title>
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <!-- Google Fonts: preconnect and single link -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
-    <h1>Meline's WDD 231 Course Home Page</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Assignments</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
+    <h1>Meline's WDD 231 Course Home Page</h1>
+
     <section>
-      <h2>Introduction</h2>
-      <p>Welcome to my course homepage for WDD 231.</p>
+      <h2>Welcome</h2>
+      <p>Welcome to the WDD 231 course site. Here you'll find resources and assignments.</p>
+      <img src="images/logo.png" alt="Meline's Logo" width="150" height="150">
     </section>
+
     <section>
-      <h2>Course Overview</h2>
-      <p>This course covers HTML, CSS, and JavaScript with a project-based approach.</p>
+      <h2>Course Materials</h2>
+      <p>Access your course documents, readings, and exercises here.</p>
     </section>
+
     <section>
-      <h2>Assignments</h2>
-      <p>Find weekly assignments and project details here.</p>
+      <h2>Contact</h2>
+      <p>If you have any questions, feel free to reach out.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> Meline</p>
+    <p>&copy; 2025 Meline</p>
   </footer>
 
   <script src="scripts/script.js" defer></script>
