Fix audit issues: correct folder names, add meta charset, update Google Fonts link, improve anchor tags and header structure, add logo SVG, and defer JS script

--- a/index.html
+++ b/index.html
@@ -1,54 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="utf-8"> <!-- fixed meta charset -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Meline's WDD 231 Course Home Page showcasing course materials and resources.">
-  <meta name="author" content="Meline">
-  <title>Meline's WDD 231 Course Home Page</title>
-
-  <!-- Google Fonts: preconnect and single link -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="styles/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Meline's WDD 231 Course Home Page</title>
+    <meta name="description" content="Meline's WDD 231 Course Home Page - assignments, resources, and course info." />
+    <meta name="author" content="Meline" />
+    <!-- Google Fonts: Roboto only once, with preconnect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <a href="index.html" aria-label="Home">
+                <img src="images/logo.svg" alt="Meline Logo" width="120" height="40" />
+            </a>
+            <ul>
+                <li><a href="index.html" aria-label="Home">Home</a></li>
+                <li><a href="assignments.html" aria-label="Assignments">Assignments</a></li>
+                <li><a href="resources.html" aria-label="Resources">Resources</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <h1>Meline's WDD 231 Course Home Page</h1>
+    <main>
+        <h1>Meline's WDD 231 Course Home Page</h1>
 
-    <section>
-      <h2>Welcome</h2>
-      <p>Welcome to the WDD 231 course site. Here you'll find resources and assignments.</p>
-      <img src="images/logo.png" alt="Meline's Logo" width="150" height="150">
-    </section>
+        <section>
+            <h2>Course Overview</h2>
+            <p>Welcome to WDD 231! This course covers HTML, CSS, and JavaScript fundamentals.</p>
+        </section>
 
-    <section>
-      <h2>Course Materials</h2>
-      <p>Access your course documents, readings, and exercises here.</p>
-    </section>
-
-    <section>
-      <h2>Contact</h2>
-      <p>If you have any questions, feel free to reach out.</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Meline</p>
-  </footer>
-
-  <script src="scripts/script.js" defer></script>
-</body>
-</html>
+        <section>
+            <h2>Assign
