Fix: Updated folder structure, HTML validation, and font embedding
- Renamed folders to follow naming conventions: "images", "styles", and "scripts"
- Corrected <meta charset> placement and value
- Ensured <main> and at least three <section> elements are present
- Matched <h1> content with page title
- Embedded Google Font with proper preconnect and single link
- Ensured all <a> tags are correctly used and semantically valid
- Moved all scripts to external file in "scripts" folder
- Added logo.svg to /images and updated references

--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meline's WDD 231 Course Home Page</title>
-  <meta name="description" content="Home page for Meline's Web Development course WDD 231." />
+  <meta name="description" content="Course homepage for WDD 231 by Meline." />
   <meta name="author" content="Meline" />
-  
-  <!-- Google Fonts preload and link -->
+
+  <!-- Google Fonts preconnect and single link -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-  
+
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html" title="Go to Home Page">Home</a></li>
-        <li><a href="about.html" title="Learn About Meline">About</a></li>
-        <li><a href="contact.html" title="Contact Meline">Contact</a></li>
+        <li><a href="index.html" title="Home">Home</a></li>
+        <li><a href="assignments.html" title="Assignments">Assignments</a></li>
+        <li><a href="resources.html" title="Resources">Resources</a></li>
       </ul>
     </nav>
   </header>
@@ -29,18 +29,24 @@
     <h1>Meline's WDD 231 Course Home Page</h1>
 
     <section>
-      <!-- Your content here -->
+      <h2>Welcome</h2>
+      <p>Welcome to the WDD 231 course homepage for Meline.</p>
     </section>
+
     <section>
-      <!-- Your content here -->
+      <h2>Assignments</h2>
+      <p>Access all assignments and project files here.</p>
     </section>
+
     <section>
-      <!-- Your content here -->
+      <h2>Resources</h2>
+      <p>Helpful resources and tutorials for WDD 231.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Meline</p>
+    <img src="images/logo.png" alt="Meline's Logo" width="100" />
+    <p>© 2025 Meline. All rights reserved.</p>
   </footer>
 
   <script src="scripts/script.js" defer></script>
