--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Meline's WDD 231 Course Home Page">
+  <meta name="author" content="Meline">
   <title>Meline's WDD 231 Course Home Page</title>
-  <meta name="description" content="Course homepage for WDD 231 by Meline." />
-  <meta name="author" content="Meline" />
 
-  <!-- Google Fonts preconnect and single link -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <!-- Google Fonts Preconnect & Link -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles/style.css" />
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
+    <img src="images/logo.svg" alt="Meline Logo" width="100" height="100">
     <nav>
       <ul>
-        <li><a href="index.html" title="Home">Home</a></li>
-        <li><a href="assignments.html" title="Assignments">Assignments</a></li>
-        <li><a href="resources.html" title="Resources">Resources</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -29,24 +31,23 @@
     <h1>Meline's WDD 231 Course Home Page</h1>
 
     <section>
-      <h2>Welcome</h2>
-      <p>Welcome to the WDD 231 course homepage for Meline.</p>
+      <h2>About This Course</h2>
+      <p>This course teaches web frontend development using HTML, CSS, and JavaScript.</p>
     </section>
 
     <section>
       <h2>Assignments</h2>
-      <p>Access all assignments and project files here.</p>
+      <p>Weekly assignments will be listed here.</p>
     </section>
 
     <section>
       <h2>Resources</h2>
-      <p>Helpful resources and tutorials for WDD 231.</p>
+      <p>Links to helpful resources for learning web development.</p>
     </section>
   </main>
 
   <footer>
-    <img src="images/logo.png" alt="Meline's Logo" width="100" />
-    <p>© 2025 Meline. All rights reserved.</p>
+    <p>&copy; <span id="year"></span> Meline | WDD 231</p>
   </footer>
 
   <script src="scripts/script.js" defer></script>
