--- a/index.html
+++ b/index.html
@@ -1,53 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meline's WDD 231 Course Home Page</title>
   <meta name="description" content="Meline's WDD 231 Course Home Page">
   <meta name="author" content="Meline">
-  <title>Meline's WDD 231 Course Home Page</title>
 
-  <!-- Google Fonts Preconnect & Link -->
+  <!-- Google Fonts preload and single link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-  <!-- Styles -->
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
-    <img src="images/logo.svg" alt="Meline Logo" width="100" height="100">
     <nav>
+      <a href="index.html" aria-label="Home">
+        <img src="images/logo.svg" alt="Meline Logo" width="100" height="100">
+      </a>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="assignments.html">Assignments</a></li>
+        <li><a href="resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <h1>Meline's WDD 231 Course Home Page</h1>
-
     <section>
-      <h2>About This Course</h2>
-      <p>This course teaches web frontend development using HTML, CSS, and JavaScript.</p>
+      <h2>Welcome</h2>
+      <p>Welcome to the WDD 231 course homepage. Here you will find all course content and resources.</p>
     </section>
-
     <section>
       <h2>Assignments</h2>
-      <p>Weekly assignments will be listed here.</p>
+      <p>Access weekly assignments and project details here.</p>
     </section>
-
     <section>
       <h2>Resources</h2>
-      <p>Links to helpful resources for learning web development.</p>
+      <p>Helpful links and study materials for the course are available here.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> Meline | WDD 231</p>
+    <p>&copy; 2025 Meline</p>
   </footer>
 
   <script src="scripts/script.js" defer></script>
