--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,55 +1,58 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Member directory for the Sampletown Chamber of Commerce">
-  <meta name="author" content="Your Full Name">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
   <title>Sampletown Chamber Directory</title>
-  <link rel="icon" href="images/favicon.ico">
-
-  <!-- Facebook Meta Tags -->
-  <meta property="og:title" content="Sampletown Chamber of Commerce">
-  <meta property="og:description" content="Explore trusted local businesses in Sampletown.">
-  <meta property="og:image" content="https://your-username.github.io/wdd231/chamber/images/social-banner.jpg">
-  <meta property="og:url" content="https://your-username.github.io/wdd231/chamber/directory.html">
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/styles.css">
+  <meta name="description" content="Member directory for the Sampletown Chamber of Commerce" />
+  <meta name="author" content="Your Full Name" />
+  
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  
+  <!-- Facebook Open Graph meta -->
+  <meta property="og:title" content="Sampletown Chamber of Commerce" />
+  <meta property="og:description" content="Explore trusted local businesses in Sampletown." />
+  <meta property="og:image" content="https://your-username.github.io/wdd231/chamber/images/social-banner.jpg" />
+  <meta property="og:url" content="https://your-username.github.io/wdd231/chamber/directory.html" />
+  
+  <!-- CSS Reset -->
+  <link rel="stylesheet" href="styles/normalize.css" />
+  
+  <!-- Main Stylesheet -->
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
-  <header>
-    <h1>Sampletown Chamber of Commerce</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="directory.html">Directory</a>
-      <a href="about.html">About</a>
-    </nav>
-  </header>
 
-  <main>
-    <section class="view-toggle">
-      <button id="grid">Grid View</button>
-      <button id="list">List View</button>
-    </section>
-    <section class="members" id="members-container">
-      <!-- JS will inject member cards here -->
-    </section>
-  </main>
+<header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="directory.html">Directory</a>
+    <a href="about.html">About</a>
+  </nav>
+</header>
 
-  <footer>
-    <p>Contact us: info@sampletownchamber.com | 555-123-4567</p>
-    <p>&copy; <span id="year"></span> Sampletown Chamber | <span id="lastModified"></span></p>
-    <p>Student: Your Full Name | Course: WDD 231</p>
-  </footer>
+<main>
+  <h1>Sampletown Chamber of Commerce</h1>
+  
+  <section class="view-toggle">
+    <button id="grid">Grid View</button>
+    <button id="list">List View</button>
+  </section>
+  
+  <section class="members grid" id="members-container">
+    <!-- Members will be dynamically loaded here -->
+  </section>
+</main>
 
-  <script src="scripts/directory.js"></script>
+<footer>
+  <p>Contact us at info@sampletownchamber.com</p>
+  <p>Developed by Your Full Name, WDD 231</p>
+  <p>&copy; <span id="year"></span> Sampletown Chamber of Commerce</p>
+  <p>Last modified: <span id="lastModified"></span></p>
+</footer>
+
+<script src="scripts/main.js"></script>
 </body>
 </html>
