--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -2,57 +2,68 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8" />
+  
+  <!-- Viewport for responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
+  <!-- Page Title -->
   <title>Sampletown Chamber Directory</title>
+  
+  <!-- Meta Description -->
   <meta name="description" content="Member directory for the Sampletown Chamber of Commerce" />
+  
+  <!-- Meta Author -->
   <meta name="author" content="Your Full Name" />
   
-  <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  
-  <!-- Facebook Open Graph meta -->
+  <!-- Facebook Open Graph Metadata -->
   <meta property="og:title" content="Sampletown Chamber of Commerce" />
   <meta property="og:description" content="Explore trusted local businesses in Sampletown." />
-  <meta property="og:image" content="https://your-username.github.io/wdd231/chamber/images/social-banner.jpg" />
+  <meta property="og:image" content="images/social-banner.jpg" />
   <meta property="og:url" content="https://your-username.github.io/wdd231/chamber/directory.html" />
   
-  <!-- CSS Reset -->
-  <link rel="stylesheet" href="styles/normalize.css" />
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   
-  <!-- Main Stylesheet -->
+  <!-- Google Fonts preconnect and stylesheet -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+  
+  <!-- CSS Stylesheets -->
+  <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
+  <header>
+    <h1>Sampletown Chamber of Commerce Directory</h1>
+    <nav>
+      <ul>
+        <li><a href="directory.html" title="Directory Page">Directory</a></li>
+        <li><a href="events.html" title="Events Page">Events</a></li>
+        <li><a href="contact.html" title="Contact Page">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="directory.html">Directory</a>
-    <a href="about.html">About</a>
-  </nav>
-</header>
+  <main>
+    <section id="view-toggle">
+      <button id="gridViewBtn" aria-pressed="true">Grid View</button>
+      <button id="listViewBtn" aria-pressed="false">List View</button>
+    </section>
 
-<main>
-  <h1>Sampletown Chamber of Commerce</h1>
-  
-  <section class="view-toggle">
-    <button id="grid">Grid View</button>
-    <button id="list">List View</button>
-  </section>
-  
-  <section class="members grid" id="members-container">
-    <!-- Members will be dynamically loaded here -->
-  </section>
-</main>
+    <section id="directory" class="grid">
+      <!-- Member cards will be loaded here by JS -->
+    </section>
+  </main>
 
-<footer>
-  <p>Contact us at info@sampletownchamber.com</p>
-  <p>Developed by Your Full Name, WDD 231</p>
-  <p>&copy; <span id="year"></span> Sampletown Chamber of Commerce</p>
-  <p>Last modified: <span id="lastModified"></span></p>
-</footer>
+  <footer>
+    <p>Contact: info@sampletownchamber.com | 555-123-4567</p>
+    <p>Developed by Your Full Name | WDD 231</p>
+    <p id="lastModified"></p>
+    <p>&copy; <span id="year"></span> Sampletown Chamber of Commerce</p>
+  </footer>
 
-<script src="scripts/main.js"></script>
+  <!-- JavaScript -->
+  <script src="scripts/main.js" defer></script>
 </body>
 </html>
