Complete chamber directory page with HTML, CSS, JS, and JSON data — validation fixed and ready for deployment

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,63 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>Sampletown Chamber Directory</title>
-  <meta name="description" content="Member directory for the Sampletown Chamber of Commerce." />
+  <title>Sampletown Chamber of Commerce Directory</title>
+  <meta name="description" content="Member directory for the Sampletown Chamber of Commerce. Discover trusted local businesses." />
   <meta name="author" content="Your Full Name" />
-  
-  <!-- Facebook Open Graph meta -->
+
+  <!-- Facebook Open Graph -->
   <meta property="og:title" content="Sampletown Chamber of Commerce" />
   <meta property="og:description" content="Explore trusted local businesses in Sampletown." />
-  <meta property="og:image" content="https://your-username.github.io/wdd231/chamber/images/social-banner.jpg" />
+  <meta property="og:image" content="images/social-banner.jpg" />
   <meta property="og:url" content="https://your-username.github.io/wdd231/chamber/directory.html" />
-  
-  <!-- Google Fonts preconnect -->
+
+  <link rel="icon" href="images/favicon.ico" />
+
+  <!-- Normalize CSS -->
+  <link rel="stylesheet" href="styles/normalize.css" />
+
+  <!-- Main styles -->
+  <link rel="stylesheet" href="styles/styles.css" />
+
+  <!-- Google Fonts preconnect and link -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <!-- Google Fonts stylesheet -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
-  
-  <!-- CSS files -->
-  <link rel="stylesheet" href="styles/normalize.css" />
-  <link rel="stylesheet" href="styles/styles.css" />
-  
-  <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" />
 </head>
 <body>
   <header>
-    <h1>Sampletown Chamber Directory</h1>
+    <h2>Sampletown Chamber of Commerce</h2>
     <nav>
       <ul>
-        <li><a href="directory.html">Directory</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="about.html">About</a></li>
-        <!-- Add other nav items -->
+        <li><a href="index.html">Home</a></li>
+        <li><a href="directory.html" aria-current="page">Directory</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- Toggle Buttons for Grid/List -->
-    <section id="view-toggle">
-      <button id="grid-view-btn" aria-pressed="true">Grid View</button>
-      <button id="list-view-btn" aria-pressed="false">List View</button>
+    <h1>Sampletown Chamber of Commerce Directory</h1>
+
+    <section>
+      <button id="gridViewBtn" aria-pressed="true">Grid View</button>
+      <button id="listViewBtn" aria-pressed="false">List View</button>
     </section>
 
-    <!-- Members Directory -->
-    <section id="members" class="grid-view" aria-live="polite">
-      <!-- Members will be populated here by JS -->
+    <section id="membersList" class="grid-view" aria-live="polite">
+      <!-- Member cards will be injected here by JavaScript -->
     </section>
   </main>
 
   <footer>
-    <p>Contact: contact@sampletownchamber.com | 555-123-4567</p>
+    <p>Contact: info@sampletownchamber.com | Phone: (555) 123-4567</p>
     <p>Your Full Name | WDD 231</p>
-    <p>&copy; <span id="copyright-year"></span> Sampletown Chamber of Commerce</p>
-    <p>Last modified: <span id="last-modified"></span></p>
+    <p>&copy; <span id="copyrightYear"></span></p>
+    <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-  <script src="scripts/main.js" defer></script>
+  <script src="scripts/directory.js"></script>
 </body>
 </html>
