--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Sampletown Chamber of Commerce Directory</title>
-  <meta name="description" content="Explore trusted local businesses in Sampletown through our Chamber Directory. Discover services, addresses, and contacts.">
+  <meta name="description" content="Explore trusted local businesses in Sampletown through our Chamber Directory. Discover services, contacts, and more.">
   <meta name="author" content="Your Full Name">
 
-  <!-- Google Fonts -->
+  <!-- Google Fonts preconnect and single link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -27,7 +27,6 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-
   <header>
     <nav>
       <ul>
@@ -39,24 +38,25 @@
   </header>
 
   <main>
-    <h1>Sampletown Chamber Directory</h1>
+    <h1>Sampletown Chamber of Commerce Directory</h1>
 
-    <div class="layout-toggle">
-      <button id="gridViewBtn" aria-label="Show grid view">Grid View</button>
-      <button id="listViewBtn" aria-label="Show list view">List View</button>
-    </div>
+    <section class="view-toggle">
+      <button id="gridViewBtn" aria-pressed="true">Grid View</button>
+      <button id="listViewBtn" aria-pressed="false">List View</button>
+    </section>
 
     <section id="members" class="grid-view" aria-live="polite">
-      <!-- Members will load here -->
+      <!-- JS will inject member cards here -->
     </section>
   </main>
 
   <footer>
-    <p>Contact us: info@sampletownchamber.com | Phone: (555) 555-5555</p>
-    <p>Developed by Your Full Name | WDD 231 | Last modified: <span id="lastModified"></span> | &copy; <span id="currentYear"></span></p>
+    <p>Contact: info@sampletownchamber.com | Phone: (555) 555-5555</p>
+    <p>Your Full Name | WDD 231</p>
+    <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce</p>
+    <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-  <script src="scripts/main.js" defer></script>
+  <script src="scripts/directory.js" defer></script>
 </body>
 </html>
-`
