--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sampletown Chamber Directory</title>
+    <meta name="description" content="Member directory for the Sampletown Chamber of Commerce" />
+    <meta name="author" content="Meline Levao" />
 
-  <title>Sampletown Chamber Directory</title>
-  <meta name="description" content="Member directory for the Sampletown Chamber of Commerce">
-  <meta name="author" content="Meline Levao">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Sampletown Chamber of Commerce" />
+    <meta property="og:description" content="Explore trusted local businesses in Sampletown." />
+    <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Sampletown+Chamber+Banner" />
+    <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/directory.html" />
 
-  <!-- Google Fonts preload & link -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico" />
 
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/styles.css">
+    <!-- Google Fonts: preconnect and single link for Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 
-  <!-- Open Graph Meta -->
-  <meta property="og:title" content="Sampletown Chamber Commerce">
-  <meta property="og:description" content="Explore trusted local businesses in Sampletown.">
-  <meta property="og:image" content="images/social-banner.jpg">
-  <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/directory.html">
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
 </head>
+
 <body>
-  <header>
-    <h1>Sampletown Chamber Directory</h1>
-    <nav>
-      <ul>
-        <li><a href="directory.html">Directory</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <h1>Sampletown Chamber Directory</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <div class="view-toggle" role="region" aria-label="View toggle buttons">
-      <button id="gridViewBtn" aria-pressed="true">Grid View</button>
-      <button id="listViewBtn" aria-pressed="false">List View</button>
-    </div>
+    <main>
+        <section class="view-toggle">
+            <button id="gridViewBtn" aria-pressed="true">Grid View</button>
+            <button id="listViewBtn" aria-pressed="false">List View</button>
+        </section>
 
-    <section id="members" class="grid-view" aria-live="polite" aria-atomic="true"></section>
-  </main>
+        <section id="members" class="grid-view">
+            <!-- Members will be dynamically loaded here -->
+        </section>
+    </main>
 
-  <footer>
-    <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce</p>
-    <p>Last updated: <span id="lastModified"></span></p>
-  </footer>
+    <footer>
+        <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce</p>
+        <p>Last Modified: <span id="lastModified"></span></p>
+    </footer>
 
-  <!-- JavaScript -->
-  <script src="scripts/directory.js" defer></script>
+    <!-- JS Script -->
+    <script src="scripts/directory.js"></script>
 </body>
 </html>
